// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render a FileUploadButton 1`] = `
<div>
  <div
    role="presentation"
    tabindex="0"
  >
    <button
      class="button secondary hasText"
      type="button"
    >
      <span
        class="buttonText"
      >
        Upload something!
      </span>
    </button>
    <input
      multiple=""
      style="display: none;"
      tabindex="-1"
      type="file"
    />
  </div>
</div>
`;

exports[`Render a FileUploadButton with other skin and icon 1`] = `
<div>
  <div
    role="presentation"
    tabindex="0"
  >
    <button
      class="button link hasText"
      type="button"
    >
      <span
        aria-label="su-image"
        class="su-image buttonIcon"
      />
      <span
        class="buttonText"
      >
        Upload something!
      </span>
    </button>
    <input
      multiple=""
      style="display: none;"
      tabindex="-1"
      type="file"
    />
  </div>
</div>
`;

exports[`Render a disabled FileUploadButton 1`] = `
<div>
  <div
    role="presentation"
    tabindex="0"
  >
    <button
      class="button secondary hasText"
      disabled=""
      type="button"
    >
      <span
        class="buttonText"
      >
        Upload something!
      </span>
    </button>
    <input
      multiple=""
      style="display: none;"
      tabindex="-1"
      type="file"
    />
  </div>
</div>
`;
